# ws-chat

./: Cargo.toml
app/: package.json
app/src/: app.jsx  index.html  main.jsx  styles.scss
app/src/components/: Chat.jsx  Message.jsx
src/: main.rs
src/app/: message.rs  mod.rs  server.rs  session.rs  ws.rs
static/: index.html  main.js
