[package]
name = "ws-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4"
actix-web-actors = "4.1.0"
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["serde"] }

[dependencies.serde]
version = "1.0.145"
features = ["derive"]
